--- a/test-output/old/Interview Preparation/classes.html
+++ b/test-output/old/Interview Preparation/classes.html
@@ -15,6 +15,14 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>getScreenShotAsFile</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getScreenShotAsBase64</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>InvokeMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
