--- a/test-output/old/Interview Preparation/methods-not-run.html
+++ b/test-output/old/Interview Preparation/methods-not-run.html
@@ -1,7 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>INTERVIEW_JAVA.ToReadExcelData.readExcelData</td></tr>
-<tr><td>INTERVIEW_JAVA.ToReadExcelData.InvokeMethod</td></tr>
-<tr><td>INTERVIEW_JAVA.ToReadExcelData.readExcelData1</td></tr>
-<tr><td>INTERVIEW_JAVA.ToReadExcelData.toWriteData</td></tr>
 <tr><td>INTERVIEW_JAVA.ToReadExcelData.toWriteDataUsingForEachLoop</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.toWriteData</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.readExcelData</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.readExcelData1</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.getScreenShotAsFile</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.InvokeMethod</td></tr>
+<tr><td>INTERVIEW_JAVA.ToReadExcelData.enterNames</td></tr>
 </table>
