--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Interview Preparation</th></tr>
-<tr><td><a href="#t0">Selenium Practice Basics</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,246</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,129</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Interview Preparation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Selenium Practice Basics &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">INTERVIEW_JAVA.ToReadExcelData</td><td><a href="#m0">enterNames</a></td><td rowspan="1">1732190653554</td><td rowspan="1">9</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">INTERVIEW_JAVA.ToReadExcelData</td><td><a href="#m0">MouseKeyboardActionsDemo</a></td><td rowspan="1">1732982897376</td><td rowspan="1">463</td></tr></tbody>
 </table>
-<h2>Selenium Practice Basics</h2><h3 id="m0">INTERVIEW_JAVA.ToReadExcelData#enterNames</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>mngr507257</td><td>uzunyny</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">INTERVIEW_JAVA.ToReadExcelData#MouseKeyboardActionsDemo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
