--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Interview_Preparation" class="navigator-link">
-              <span class="suite-name border-passed">Interview Preparation</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Interview_Preparation" class="navigator-link ">
-                    <span>D:\JAVA PROJECTS\COM.INTERVIEW.PRACTICE\testng.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\AKILA RAJESH\AppData\Local\Temp\testng-eclipse-1793370335\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Interview_Preparation" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -97,16 +97,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Interview_Preparation" class="hide-methods passed suite-Interview_Preparation"> (hide)</a> <!-- hide-methods passed suite-Interview_Preparation -->
-                      <a href="#" panel-name="suite-Interview_Preparation" class="show-methods passed suite-Interview_Preparation"> (show)</a> <!-- show-methods passed suite-Interview_Preparation -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Interview_Preparation">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Interview_Preparation" title="INTERVIEW_JAVA.ToReadExcelData" class="method navigator-link" hash-for-method="enterNames(mngr507257, uzunyny)">enterNames(mngr507257, uzunyny)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="INTERVIEW_JAVA.ToReadExcelData" class="method navigator-link" hash-for-method="MouseKeyboardActionsDemo">MouseKeyboardActionsDemo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Interview_Preparation -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,8 +117,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Interview_Preparation" class="panel Interview_Preparation">
-          <div class="suite-Interview_Preparation-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">INTERVIEW_JAVA.ToReadExcelData</span>
@@ -126,64 +126,64 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="enterNames(mngr507257, uzunyny)">
-                  </a> <!-- enterNames(mngr507257, uzunyny) -->
-                  <span class="method-name">enterNames</span>
-                  <span class="parameters">(mngr507257,uzunyny)</span>
+                  <a name="MouseKeyboardActionsDemo">
+                  </a> <!-- MouseKeyboardActionsDemo -->
+                  <span class="method-name">MouseKeyboardActionsDemo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Interview_Preparation-class-passed -->
-        </div> <!-- panel Interview_Preparation -->
-        <div panel-name="test-xml-Interview_Preparation" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\JAVA PROJECTS\COM.INTERVIEW.PRACTICE\testng.xml</span>
+            <span class="header-content">C:\Users\AKILA RAJESH\AppData\Local\Temp\testng-eclipse-1793370335\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Interview Preparation&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;listeners&gt;
-    &lt;listener class-name=&quot;INTERVIEW_JAVA.ActionListener&quot;/&gt;
-  &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Selenium Practice Basics&quot;&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;INTERVIEW_JAVA.ToReadExcelData&quot;/&gt;
+      &lt;class name=&quot;INTERVIEW_JAVA.ToReadExcelData&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;MouseKeyboardActionsDemo&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- INTERVIEW_JAVA.ToReadExcelData --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Selenium Practice Basics --&gt;
-&lt;/suite&gt; &lt;!-- Interview Preparation --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Interview_Preparation" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Interview Preparation</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Selenium Practice Basics (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Interview_Preparation" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Interview Preparation</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Interview_Preparation" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Interview Preparation</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Interview_Preparation');
-function tableData_Interview_Preparation() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -191,49 +191,57 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'enterNames')
+data.setCell(0, 1, 'MouseKeyboardActionsDemo')
 data.setCell(0, 2, 'INTERVIEW_JAVA.ToReadExcelData')
-data.setCell(0, 3, 9);
-window.suiteTableData['Interview_Preparation']= { tableData: data, tableDiv: 'times-div-Interview_Preparation'}
+data.setCell(0, 3, 463);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 ms</span>
-              <div id="times-div-Interview_Preparation">
-              </div> <!-- times-div-Interview_Preparation -->
+              <span class="suite-total-time">Total running time: 463 ms</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Interview_Preparation" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Interview Preparation</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Interview_Preparation" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">9 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">INTERVIEW_JAVA.ToReadExcelData</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">readExcelData</span>
-                <br/>
                 <span class="ignored-method-name">InvokeMethod</span>
+                <br/>
+                <span class="ignored-method-name">getScreenShotAsBase64</span>
+                <br/>
+                <span class="ignored-method-name">toWriteDataUsingForEachLoop</span>
                 <br/>
                 <span class="ignored-method-name">readExcelData1</span>
                 <br/>
+                <span class="ignored-method-name">webdriverDemo</span>
+                <br/>
+                <span class="ignored-method-name">getScreenShotAsFile</span>
+                <br/>
                 <span class="ignored-method-name">toWriteData</span>
                 <br/>
-                <span class="ignored-method-name">toWriteDataUsingForEachLoop</span>
+                <span class="ignored-method-name">enterNames</span>
+                <br/>
+                <span class="ignored-method-name">readExcelData</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Interview_Preparation" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -245,8 +253,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">enterNames(mngr507257, uzunyny)</span>
-                <span class="method-start">874 ms</span>
+                <span class="method-name">MouseKeyboardActionsDemo</span>
+                <span class="method-start">9644 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
