--- a/test-output/old/Interview Preparation/methods-alphabetical.html
+++ b/test-output/old/Interview Preparation/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Interview Preparation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60bcab">  <td>24/11/21 17:34:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ToReadExcelData.beforeTest()[pri:0, instance:INTERVIEW_JAVA.ToReadExcelData@71e9ddb4]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="60bcab">  <td>24/11/21 23:00:28</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;ToReadExcelData.afterTest()[pri:0, instance:INTERVIEW_JAVA.ToReadExcelData@45b4c3a9]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>24/11/21 17:34:13</td>   <td>868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToReadExcelData.enterNames(java.lang.String,java.lang.String)[pri:0, instance:INTERVIEW_JAVA.ToReadExcelData@71e9ddb4]">enterNames</td> 
+<tr bgcolor="60bcab">  <td>24/11/21 23:00:20</td>   <td>-7672</td> <td>&nbsp;</td><td title="&gt;&gt;ToReadExcelData.beforeTest()[pri:0, instance:INTERVIEW_JAVA.ToReadExcelData@45b4c3a9]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="60bcab">  <td>24/11/21 23:00:28</td>   <td>-244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToReadExcelData.getScreenShotAsBase64()[pri:0, instance:INTERVIEW_JAVA.ToReadExcelData@45b4c3a9]">getScreenShotAsBase64</td> 
   <td>main@1995265320</td>   <td></td> </tr>
 </table>
